# corecrypto

./: CMakeLists.txt  CoreCryptoSources.cmake  License.txt  Makefile  README.md  corecrypto.xcconfig  module.private.modulemap  sep.xcconfig
acceleratecrypto/Header/: AccelerateCrypto.h
cc/corecrypto/: cc.h  cc_absolute_time.h  cc_config.h  cc_debug.h  cc_error.h  cc_fault_canary.h  cc_fault_canary_internal.h  cc_internal.h  cc_memory.h  cc_runtime_config.h
cc/crypto_test/: crypto_test_cc.c
cc/src/: cc_abort.c  cc_atfork_child.c  cc_atfork_parent.c  cc_atfork_prepare.c  cc_clear.c  cc_cmp_safe.c  cc_debug.c  cc_fault_canary.c  cc_muxp.c  cc_rdrand.c
cc/xcunit/: cc_composeString.m  cc_hex_string.m  cc_unit.h
cc_fips/corecrypto/: fipspost.h  fipspost_get_cpu_key.h  fipspost_indicator.h  fipspost_post_indicator.h  fipspost_post_rsa.h  fipspost_post_rsa_enc_dec.h  fipspost_post_rsa_sig.h  fipspost_post_tdes_cbc.h  fipspost_priv.h  fipspost_trace_priv.h  module_id.h
cc_fips/crypto_test/: crypto_test_cc_fips.c
cc_fips/src/: fipspost_get_cpu_key.c  fipspost_get_hmac.c  fipspost_indicator.c  fipspost_post.c  fipspost_post_aes_cbc.c  fipspost_post_aes_ccm.c  fipspost_post_aes_cmac.c  fipspost_post_aes_ecb.c  fipspost_post_aes_gcm.c  fipspost_post_aes_skg.c  fipspost_post_aes_xts.c  fipspost_post_drbg_ctr.c  fipspost_post_drbg_hmac.c  fipspost_post_drbg_trng.c  fipspost_post_ecdh.c  fipspost_post_ecdsa.c  fipspost_post_ffdh.c  fipspost_post_hmac.c  fipspost_post_indicator.c  fipspost_post_integrity.c  fipspost_post_kdf_ctr.c  fipspost_post_pbkdf.c  fipspost_post_rsa.c  fipspost_post_rsa_enc_dec.c  fipspost_post_rsa_sig.c  fipspost_post_tdes_cbc.c  fipspost_trace.c  module_id.c
cc_fips_test/: main.c
ccaes/corecrypto/: ccaes_internal.h
ccaes/crypto_test/: aes_validation.c  crypto_test_aes_modes.c
ccaes/src/: ccaes_cbc_decrypt_mode.c  ccaes_cbc_encrypt_mode.c  ccaes_ccm_decrypt_mode.c  ccaes_ccm_encrypt_mode.c  ccaes_cfb8_decrypt_mode.c  ccaes_cfb8_encrypt_mode.c  ccaes_cfb_decrypt_mode.c  ccaes_cfb_encrypt_mode.c  ccaes_ctr_crypt_mode.c  ccaes_ecb_decrypt_mode.c  ccaes_ecb_encrypt_mode.c  ccaes_gcm_decrypt_mode.c  ccaes_gcm_encrypt_mode.c  ccaes_ofb_crypt_mode.c  ccaes_siv_decrypt_mode.c  ccaes_siv_encrypt_mode.c  ccaes_siv_hmac_sha256_decrypt_mode.c  ccaes_siv_hmac_sha256_encrypt_mode.c  ccaes_unwind.c  ccaes_xts_decrypt_mode.c  ccaes_xts_encrypt_mode.c
ccaes/xcunit/: cbc.pl  cbc.sh  ccm.pl  ccmVADT128rsp.inc  ccmVADT192rsp.inc  ccmVADT256rsp.inc  cfb.pl  cfb.sh  ecb.pl  ecb.sh  gcm.pl  gcm.sh  xts.pl  xts.sh
ccansikdf/corecrypto/: ccansikdf.h  ccansikdf_priv.h
ccansikdf/crypto_test/: crypto_test_ansikdf.c
ccansikdf/src/: ccansikdf_x963.c
ccblowfish/corecrypto/: ccblowfish.h
ccblowfish/crypto_test/: crypto_test_blowfish_modes.c
ccblowfish/docs/: references.txt
ccblowfish/src/: ccblowfish_constructed_modes.c  ccblowfish_ltc_common.c  ccblowfish_ltc_ecb_decrypt.c
cccast/corecrypto/: cccast.h
cccast/crypto_test/: crypto_test_cast_modes.c
cccast/src/: c_enc.c  cccast_constructed_modes.c  cccast_ecb_decrypt_mode.c  cccast_ecb_encrypt_mode.c  cccast_setup.c
ccchacha20poly1305/corecrypto/: ccchacha20poly1305_priv.h
ccchacha20poly1305/crypto_test/: crypto_test_chacha.c  crypto_test_chacha20poly1305_runner.c  crypto_test_chacha20poly1305_runner.h
ccchacha20poly1305/src/: ccchacha20poly1305.c
ccckg/corecrypto/: ccckg.h  ccckg_priv.h
ccckg/crypto_test/: ccckgtest.c
ccckg/src/: ccckg.c  ccckg_contrib.c  ccckg_owner.c
cccmac/corecrypto/: cccmac_internal.h
cccmac/crypto_test/: crypto_test_cmac.c  crypto_test_cmac_runner.c  crypto_test_cmac_runner.h
cccmac/src/: cccmac_final.c  cccmac_generate_subkey.c  cccmac_init.c  cccmac_one_shot.c  cccmac_update.c  ccmac_print_cmac.c
ccder/corecrypto/: ccder_decode_eckey.h  ccder_encode_eckey.h  ccder_internal.h  ccder_priv.h
ccder/crypto_test/: crypto_test_der.c
ccder/src/: ccder_decode_bitstring.c  ccder_decode_constructed_tl.c  ccder_decode_eckey.c  ccder_decode_len.c  ccder_decode_oid.c  ccder_decode_seqii.c  ccder_decode_sequence_tl.c  ccder_decode_tag.c  ccder_decode_tl.c  ccder_decode_uint.c  ccder_decode_uint64.c  ccder_decode_uint_n.c  ccder_encode_body.c  ccder_encode_body_nocopy.c  ccder_encode_constructed_tl.c  ccder_encode_eckey.c  ccder_encode_implicit_integer.c  ccder_encode_implicit_octet_string.c  ccder_encode_implicit_raw_octet_string.c  ccder_encode_implicit_uint64.c  ccder_encode_integer.c  ccder_encode_len.c  ccder_encode_octet_string.c  ccder_encode_oid.c  ccder_encode_raw_octet_string.c  ccder_encode_tag.c  ccder_encode_tl.c  ccder_encode_uint64.c  ccder_sizeof.c  ccder_sizeof_implicit_raw_octet_string.c
ccdes/crypto_test/: crypto_test_des_modes.c
ccdes/src/: ccdes3_ltc_ecb_decrypt.c  ccdes3_ltc_ecb_encrypt.c  ccdes_cbc_cksum.c  ccdes_constructed_modes.c  ccdes_key.c  ccdes_ltc_ecb_decrypt.c  ccdes_ltc_ecb_encrypt.c  ltc_des.c
ccdh/corecrypto/: ccdh.h  ccdh_internal.h
ccdh/crypto_test/: ccdh_test.c  crypto_test_dh.c  crypto_test_dh.h  crypto_test_gp_lookup.c  crypto_test_gp_lookup.h  crypto_test_gp_lookup_groups_tested_against.h
ccdh/src/: ccder_decode_dhparams.c  ccder_encode_dhparams.c  ccdh_check_pub.c  ccdh_compute_key.c  ccdh_compute_shared_secret.c  ccdh_copy_gp.c  ccdh_export_pub.c  ccdh_generate_key.c  ccdh_generate_private_key.c  ccdh_gp_apple768.c  ccdh_gp_rfc2409group02.c  ccdh_gp_rfc3526group05.c  ccdh_gp_rfc3526group14.c  ccdh_gp_rfc3526group15.c  ccdh_gp_rfc3526group16.c  ccdh_gp_rfc3526group17.c  ccdh_gp_rfc3526group18.c  ccdh_init_gp.c  (+12 more)
corecrypto.xcodeproj/: project.pbxproj
corecrypto_dylib/: corecrypto.exp-in
corecrypto_kext/: corecrypto_kext-Info.plist  corecrypto_kext.c
corecrypto_l4/: fipspost_l4.c  fipspost_l4.h
corecrypto_test/: main.c  testlistInc.h
corecrypto_thermal/: thermalCrypto.c
hmacfiletool/: dylib.sh  hmacfiletool-Prefix.pch  main.m
prng_seedctl/: main.c
scripts/: cmake_update.swift  convert_h2c_testvectors.py  convert_macro.swift  convert_testvectors.sh  corecrypto_coverage.sh  gen_coverage.sh
windows/: updateprojects.py
(+865 files in other folders)
